--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programme ADESTI</title>
+    <title>ADESTI-Benin | Centre de Formation en Systèmes Industriels et Informatique</title>
+    <meta name="description" content="ADESTI-Benin : Centre de formation en systèmes industriels et informatique au Bénin. Formations, boutique de composants électroniques et kits Arduino." />
+    <meta name="keywords" content="ADESTI-Benin, formation industrielle, formation informatique, Bénin, Arduino, composants électroniques" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph pour réseaux sociaux -->
+    <meta property="og:title" content="ADESTI-Benin | Centre de Formation" />
+    <meta property="og:description" content="Rejoignez ADESTI-Benin pour des formations pratiques en systèmes industriels et informatique, et découvrez notre boutique technique." />
+    <meta property="og:url" content="https://manakel-a.github.io/mon-site-adesti/" />
+    <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=ADESTI-Benin" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -16,12 +27,12 @@
 
         header {
             position: fixed;
-            top: 0;   
+            top: 0;
             left: 0;
             width: 100%;
             background-color: #006400;
             color: white;
-            padding: 15px;    
+            padding: 15px;
             text-align: center;
             z-index: 1000;
             box-shadow: 0 2px 4px rgba(0,0,0,0.2);
@@ -64,7 +75,7 @@
         }
 
         footer {
-            text-align: center;       
+            text-align: center;
             padding: 15px;
             background-color: #e0e0e0;
             color: #444;
@@ -154,28 +165,28 @@
     </style>
 </head>
 <body>
-    <header> 
-        <h1>ADESTI - Centre de Formation en Système Industriel</h1>
-        <nav> 
-            <ul> 
+    <header>
+        <h1>ADESTI-Benin - Centre de Formation en Système Industriel</h1>
+        <nav>
+            <ul>
                 <li><a href="#about">🏫 À propos</a></li>
                 <li><a href="#courses">📚 Formations</a></li>
                 <li><a href="#shop">🛒 Boutique</a></li>
                 <li><a href="#contact">📞 Contact</a></li>
-                <li><a href="#registration">📝 Inscription</a></li> 
+                <li><a href="#registration">📝 Inscription</a></li>
                 <li><a href="#faq">❓ FAQ</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <h2>Bienvenue à ADESTI</h2>
+        <h2>Bienvenue à ADESTI-Benin</h2>
         <p>Des formations de qualité en systèmes industriels pour bâtir votre avenir professionnel.</p>
     </section>
 
-    <section id="about"> 
+    <section id="about">
         <h2>À propos d'ADESTI</h2>
-        <p>ADESTI est un centre spécialisé dans la formation des étudiants et stagiaires dans les domaines des systèmes industriels. Nous nous engageons à fournir des formations de qualité, adaptées aux besoins actuels du marché.</p>
+        <p>ADESTI-Benin est un centre spécialisé dans la formation des étudiants et stagiaires dans les domaines des systèmes industriels. Nous proposons également la vente de composants électroniques et de kits Arduino pour accompagner vos projets.</p>
     </section>
 
     <section id="courses" class="formations">
@@ -190,8 +201,8 @@
 
     <section id="shop">
         <h2><a href="boutique.html" style="text-decoration: none; color: #006400;">🛒 Boutique Technique</a></h2>
-        <p>🔍 Cliquez ici pour découvrir nos composants électroniques, kits Arduino et modules robotiques en vente.</p>
-        <a href="boutique.html" style="display: inline-block; padding: 10px 20px; background-color: #006400; color: white; border-radius: 5px; text-decoration: none;">Accéder à la boutique</a>
+        <p>🔍 Découvrez nos composants électroniques, kits Arduino et modules robotiques en vente.</p>
+        <a href="boutique.html" class="btn">Accéder à la boutique</a>
     </section>
 
     <section id="contact">
@@ -238,13 +249,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 ADESTI - Tous droits réservés.</p>
+        <p>&copy; 2025 ADESTI-Benin - Tous droits réservés.</p>
     </footer>
 </body>
 </html>
-
-
-
-
-
-
