--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://manakel-a.github.io/mon-site-adesti/" />
     <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=ADESTI-Benin" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="google-site-verification" content="hAJ-H0UmQSqauzPeHXR1FSks8p9VFroK3aH439YfuZ0" />
 
     <style>
         body {
